# FlyFish

./: .gitignore  CMakeLists.txt  README.md
src/: FlyFish.cpp  FlyFish.h
tests/: test_main.cpp
